some "crucial" notes on redeploys